# update-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  containers.conf  deploy-patch.sh  deploy.yaml  shell.nix  sync.yaml
examples/: log.rs
gitgov-import/: .env  .gitignore  Cargo.toml
gitgov-import/src/: extractor.rs  main.rs
gitgov-server/: .env  Cargo.toml  README.md
gitgov-server/src/: main.rs
gitgov-server/src/ingress/: email_update.rs  mod.rs
gitgov-server/src/web/: diff.html  mod.rs  page.rs
gitgov-server/static/: style.css
gitgov-server/tests/: doc_fetch_consistency.rs
gitgov-server/tests/emails/: GOV.UK daily update.eml  GOV.UK single update.eml
gitgov-server/tests/govuk/change-name-deed-poll/: make-an-adult-deed-poll.html
govdiff_server/: .gitignore  Cargo.toml  README.md
govdiff_server/src/: data.rs  main.rs
govdiff_server/src/ingress/: mod.rs
govdiff_server/src/web/: error.rs  mod.rs  page.rs  update.html  updates.html  web_macros.rs
govdiff_server/static/: robots.txt
govdiff_server/tests/: doc_fetch_consistency.rs
govdiff_server/tests/emails/: 2022-02-17T09:55:47.eml  GOV.UK single update 2021.eml
govdiff_server/tests/govuk/government/consultations/: bus-services-act-2017-bus-open-data.html
server/: .env  Cargo.toml  README.md  benchmark.yaml  benchmark.yml  workspace.code-workspace
server/src/: data.rs  error.rs  lib.rs  main.rs  page.rs  template.html  update.html  updates.html  web_macros.rs
server/src/gitgov/: mod.rs
server/src/ingress/: doc.rs  email_update.rs  git.rs  mod.rs
server/src/web/: diff.html  mod.rs  update.html  updates.html  web_macros.rs
server/static/: index.html  style.css
server/templates/: page.html
server/tests/: doc_fetch_consistency.rs
server/tests/emails/: 2022-02-17T09:53:57.eml
src/: lib.rs  main.rs  repository.rs  url.rs
src/doc/: content.rs  mod.rs  repository.rs
src/tag/: mod.rs  repository.rs
src/update/: mod.rs  repository.rs
update-repo/: Cargo.toml
update-repo/examples/: log.rs
update-repo/src/: repository.rs  url.rs
update-repo/src/doc/: content.rs  mod.rs  repository.rs
update-repo/src/tag/: mod.rs  repository.rs
update-repo/src/update/: repository.rs
update-repo/tests/govuk/: register-to-vote
