[package]
name = "update-repo"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
include = ["src/**/*"]

[workspace]
members = ["server"]

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["std"] }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.44"
chrono-tz = "0.6.0"
clap = "2.33.3"
