[package]
name = "gitgov-import"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"

[dependencies]

git2 = { version = "0.13.12", default-features = false, features = ["ssh"] }
anyhow = "1.0.33"
dotenv = "0.15.0"
update-tracker = { path = ".." }
url = "2.2.0"
chrono = "0.4.19"
html-diff = "0.0.6"
prettydiff = "0.4.0"
scraper = "0.12.0"
html5ever = "0.25.1"
chrono-tz = "0.5.3"
