[package]
name = "gitgov-import"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"

[dependencies]
update-repo = { path = ".." }

anyhow = "1.0.33"
chrono = "0.4.19"
chrono-tz = "0.5.3"
dotenv = "0.15.0"
git2 = { version = "0.13.12", default-features = false, features = ["ssh"] }
html5ever = "0.25.1"
html-diff = "0.0.6"
lazy_static = "1.4.0"
prettydiff = "0.4.0"
scraper = "0.12.0"
url = "2.2.0"
