[package]
name = "gitgov-server"
version = "0.2.21"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
description = "GitGov server implementation"
include = ["src/**/*", "README.md"]

[dependencies]
update-repo = { path = "../update-repo" }
chrono = { workspace = true }
url = { workspace = true }
form_urlencoded = "1.0.1"
htmldiff = "0.1.0"
qp-trie = "0.7.7"
rouille = "3.3.1"
simsearch = "0.2.3"
cacache = "10"

scraper = "0.12.0"
mailparse = "0.13.6"
ureq = "2.3.0"
anyhow = "1.0.44"
dotenv = "0.15.0"
file-locker = "1"
chrono-tz = "0.6.0"

dhat = { version = "0.3", optional = true }
askama = "0.12.1"

[dev-dependencies]
html-diff = "0.0.6"
pretty_assertions = "1.0.0"

[features]
dhat-heap = ["dhat"]
