[package]
name = "govdiff_server"
version = "0.2.21"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
description = "GovDiff server implementation"
include = ["src/**/*", "README.md"]

default-run = "govdiff_server"

[dependencies]
update-repo = { path = "../update-repo" }
chrono = { workspace = true }
url = { workspace = true }
form_urlencoded = "1.0.1"
htmldiff = "0.1.0"
qp-trie = "0.7.7"
rouille = "3.6" # looks like this isn't getting updated, and uses multipart and buf_redux which will be reected in a future version of rust
simsearch = "=0.2.3" # 0.2.4 breaks a trait bound
cacache = "10"

scraper = "0.12.0"
mailparse = "0.13.6"
ureq = "2.3.0"
anyhow = "1.0.44"
dotenv = "0.15.0"
file-locker = "1"
chrono-tz = "0.6.0"

dhat = { version = "0.3", optional = true }
askama = "0.12.1"

[dev-dependencies]
html-diff = "0.0.6"
pretty_assertions = "1.0.0"

[features]
dhat-heap = ["dhat"]
