[package]
name = "govdiff_server"
version = "0.2.24"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
description = "GovDiff server implementation"
include = ["src/**/*", "README.md"]

default-run = "govdiff_server"

[dependencies]
update-repo = { path = "../update-repo" }
chrono = { workspace = true }
url = { workspace = true }
form_urlencoded = "1.0.1"
htmldiff = "0.1.0"
qp-trie = "0.8.2"
rouille = "3.6" # looks like this isn't getting updated, and uses multipart and buf_redux which will be reected in a future version of rust
cacache = "13.1.0"

scraper = "0.23.1"
mailparse = "0.16.1"
ureq = "2.3.0"
anyhow = "1.0.44"
dotenv = "0.15.0"
file-locker = "1"
chrono-tz = "0.10.3"

dhat = { version = "0.3", optional = true }
askama = "0.14.0"

[dev-dependencies]
html-diff = "0.0.6"
pretty_assertions = "1.0.0"

[features]
dhat-heap = ["dhat"]
