[package]
name = "update-tracker"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.19"
url = "2.2.2"

form_urlencoded = "1.0.1"
htmldiff = "0.1.0"
qp-trie = "0.7.7"
rouille = "3.3.1"
simsearch = "0.2.3"
update-repo = { path = ".." }

scraper = "0.12.0"
lol_html = "0.2.0"
mailparse = "0.13.0"
ureq = "1.5.1"
git2 = { version = "0.13.12", default-features = false, features = ["ssh"] }
anyhow = "1.0.33"
dotenv = "0.15.0"
file-lock = "1.1.20"
chrono-tz = "0.6.0"

[dev-dependencies]
html-diff = "0.0.6"
pretty_assertions = "1.0.0"
