[package]
name = "update-tracker"
version = "0.2.22"
edition = "2018"
include = ["src/**/*", "README.md"]

[dependencies]
chrono = "0.4.19"
url = "2.2.2"

form_urlencoded = "1.0.1"
htmldiff = "0.1.0"
qp-trie = "0.7.7"
rouille = "3.3.1"
simsearch = "0.2.3"
update-repo = { path = ".." }
cacache = "10"

scraper = "0.12.0"
mailparse = "0.13.6"
ureq = "2.3.0"
git2 = { version = "0.13.23", default-features = false, features = ["ssh"] }
anyhow = "1.0.44"
dotenv = "0.15.0"
file-locker = "1"
chrono-tz = "0.6.0"

dhat = { version = "0.3", optional = true }

[dev-dependencies]
html-diff = "0.0.6"
pretty_assertions = "1.0.0"

[features]
dhat-heap = ["dhat"]
