[package]
name = "update-repo"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
include = ["src/**/*"]

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
url = "2.2.2"
html5streams = {git = "http://github.com/platy/html5streams"}
html5ever = "0.25.1"

[dev-dependencies]
anyhow = "1.0.44"
chrono-tz = "0.6.0"
clap = { version = "3.0", features = ["derive"] }
