[package]
name = "update-repo"
version = "0.1.0"
authors = ["Mike Bush <platy@njk.onl>"]
edition = "2018"
description = "Core library for repository interaction"

[dependencies]
chrono = { workspace = true }
url = { workspace = true }
html5streams = { git = "https://github.com/platy/html5streams" }
html5ever = "0.25.1"

[dev-dependencies]
anyhow = "1.0.44"
clap = { version = "4.5.40", features = ["derive"] }
